--- a/jirehfaith-frontend/package.json
+++ b/jirehfaith-frontend/package.json
@@ -9,27 +9,19 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.2.1",
-    "@sentry/nextjs": "^10.10.0",
-    "@tanstack/react-query": "^5.87.1",
-    "axios": "^1.11.0",
-    "lucide-react": "^0.542.0",
-    "next": "15.5.2",
     "react": "19.1.0",
     "react-dom": "19.1.0",
-    "react-hook-form": "^7.62.0",
-    "sonner": "^2.0.7",
-    "zod": "^4.1.5"
+    "next": "15.5.2"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@tailwindcss/postcss": "^4",
+    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.5.2",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "@eslint/eslintrc": "^3"
   }
 }
