--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@sentry/nextjs": "^10.10.0",
     "@tanstack/react-query": "^5.87.1",
     "axios": "^1.11.0",
+    "isomorphic-dompurify": "^2.29.0",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "react": "19.1.0",
